[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/Levels/WalkingPath.gd" type="Script" id=1]
[ext_resource path="res://src/Levels/EndGame.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Levels/Buildings.gd" type="Script" id=5]
[ext_resource path="res://assets/bg/pl_city.png" type="Texture" id=6]
[ext_resource path="res://assets/tiles/buildings.tres" type="TileSet" id=7]
[ext_resource path="res://assets/tiles/path.tres" type="TileSet" id=8]
[ext_resource path="res://src/UserInterface/HUDTheme.tres" type="Theme" id=9]
[ext_resource path="res://assets/fonts/dogica/dogicapixel.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/sound/playground_theme.mp3" type="AudioStream" id=11]
[ext_resource path="res://src/UserInterface/GameOverScreen.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/bg/pl_sunset_large.png" type="Texture" id=13]
[ext_resource path="res://assets/bg/cristo.png" type="Texture" id=14]
[ext_resource path="res://assets/bg/pl_sea.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 9
outline_size = 1
font_data = ExtResource( 10 )

[node name="EndGame" type="Node2D"]
script = ExtResource( 2 )
win_scene = ExtResource( 12 )

[node name="Sky" type="Sprite" parent="."]
position = Vector2( 216, -96 )
z_index = -150
texture = ExtResource( 13 )

[node name="City" type="Sprite" parent="."]
position = Vector2( 216, -29.2648 )
scale = Vector2( 1.40323, 1.40323 )
z_index = -100
texture = ExtResource( 6 )

[node name="Sea" type="Sprite" parent="."]
position = Vector2( 192, 58 )
scale = Vector2( 1.40323, 1.40323 )
z_index = -100
texture = ExtResource( 15 )

[node name="Redeemer" type="Sprite" parent="."]
position = Vector2( 64, 38 )
z_index = -90
texture = ExtResource( 14 )

[node name="EnemiesCountLayer" type="CanvasLayer" parent="."]

[node name="EnemiesCount" type="Label" parent="EnemiesCountLayer"]
margin_left = 118.0
margin_top = 21.0
margin_right = 165.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( -249, -132 )
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 1 )
text = "50/50"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemiesCountLabel" type="Label" parent="EnemiesCountLayer"]
margin_left = 6.0
margin_top = 22.0
margin_right = 111.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( -249, -132 )
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 1 )
text = "Enemies Left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLayer" type="CanvasLayer" parent="."]

[node name="LevelTimer" type="Timer" parent="TimerLayer"]
autostart = true

[node name="TimerLabel" type="Label" parent="TimerLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -62.0
margin_top = -14.0
margin_right = -8.0
margin_bottom = -8.0
theme = ExtResource( 9 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "5:00"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="TimerLayer"]

[node name="WalkingPath" type="TileMap" parent="."]
show_behind_parent = true
position = Vector2( -1280, 64 )
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
collision_mask = 3
format = 1
tile_data = PoolIntArray( -1507249, 13, 0, -1507248, 13, 0, -1507247, 13, 0, -1507246, 13, 0, -1507245, 13, 0, -1507244, 13, 0, -1507243, 13, 0, -1507242, 13, 0, -1507241, 13, 0, -1507240, 13, 0, -1507239, 13, 0, -1507238, 13, 0, -1507237, 13, 0, -1507236, 13, 0, -1507235, 13, 0, -1507234, 13, 0, -1507233, 13, 0, -1507232, 13, 0, -1507231, 13, 0, -1507230, 13, 0, -1507229, 13, 0, -1507228, 13, 0, -1507227, 13, 0, -1507226, 13, 0, -1507225, 13, 0, -1507224, 13, 0, -1507223, 13, 0, -1441713, 1073741837, 0, -1441687, 13, 0, -1376177, 13, 0, -1376151, 13, 0, -1310641, 1073741837, 0, -1310615, 1073741837, 0, -1245105, 13, 0, -1245079, 13, 0, -1179569, 1073741837, 0, -1179543, 1073741837, 0, -1114033, 13, 0, -1114007, 13, 0, -1048497, 1073741837, 0, -1048471, 1073741837, 0, -982961, 13, 0, -982935, 13, 0, -917425, 1073741837, 0, -917399, 1073741837, 0, -851889, 13, 0, -851863, 13, 0, -786353, 1073741837, 0, -786327, 1073741837, 0, -720817, 13, 0, -720791, 13, 0, -655281, 1073741837, 0, -655255, 1073741837, 0, -589745, 13, 0, -589719, 13, 0, -524209, 1073741837, 0, -524183, 1073741837, 0, -458673, 13, 0, -458647, 13, 0, -393137, 1073741837, 0, -393111, 1073741837, 0, -327601, 13, 0, -327575, 13, 0, -262065, 1073741837, 0, -262039, 1073741837, 0, -196529, 13, 0, -196503, 13, 0, -130993, 1073741837, 0, -130967, 1073741837, 0, -65457, 13, 0, -65431, 13, 0, 79, 1073741837, 0, 105, 1073741837, 0, 65615, 13, 0, 65641, 13, 0, 131151, 1073741837, 0, 131177, 1073741837, 0, 196687, 13, 0, 196713, 13, 0, 262223, 1073741837, 0, 262249, 1073741837, 0, 327759, 13, 0, 327785, 13, 0, 393295, 1073741837, 0, 393321, 13, 0, 458831, 1073741837, 0, 458833, 20, 0, 458834, 20, 0, 458835, 20, 0, 458836, 20, 0, 458837, 20, 0, 458838, 20, 0, 458839, 20, 0, 458840, 21, 0, 458841, 536870933, 0, 458842, 20, 0, 458843, 20, 0, 458844, 20, 0, 458845, 20, 0, 458846, 20, 0, 458847, 20, 0, 458848, 21, 0, 458849, 536870933, 0, 458850, 20, 0, 458851, 20, 0, 458852, 20, 0, 458853, 20, 0, 458854, 20, 0, 458855, 20, 0, 458857, 13, 0, 524367, 1073741837, 0, 524368, 0, 0, 524369, 1, 0, 524370, 0, 0, 524371, 1, 0, 524372, 0, 0, 524373, 0, 0, 524374, 0, 0, 524375, 6, 0, 524376, 7, 0, 524377, 536870919, 0, 524378, 1, 0, 524379, 0, 0, 524380, 1, 0, 524381, 0, 0, 524382, 1, 0, 524383, 6, 0, 524384, 7, 0, 524385, 536870919, 0, 524386, 6, 0, 524387, 0, 0, 524388, 1, 0, 524389, 0, 0, 524390, 0, 0, 524391, 1, 0, 524392, 0, 0, 524393, 13, 0, 589903, 1073741837, 0, 589904, 1073741824, 0, 589905, 1073741825, 0, 589906, 1073741824, 0, 589907, 1073741825, 0, 589908, 1073741824, 0, 589909, 1073741824, 0, 589910, 1073741824, 0, 589911, 1073741830, 0, 589912, 1073741831, 0, 589913, 1610612743, 0, 589914, 1073741825, 0, 589915, 1073741824, 0, 589916, 1073741825, 0, 589917, 1073741824, 0, 589918, 1073741825, 0, 589919, 1073741830, 0, 589920, 1073741831, 0, 589921, 1610612743, 0, 589922, 1073741830, 0, 589923, 1073741824, 0, 589924, 1073741824, 0, 589925, 1073741824, 0, 589926, 1073741824, 0, 589927, 1073741825, 0, 589928, 1073741824, 0, 589929, 13, 0 )
script = ExtResource( 1 )

[node name="Buildings" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
collision_layer = 16
collision_mask = 0
format = 1
tile_data = PoolIntArray( -786428, 67, 0, -786427, 67, 0, -786426, 67, 0, -720892, 73, 0, -720891, 73, 0, -720890, 73, 0, -655356, 72, 0, -655355, 69, 0, -655354, 72, 0, -655350, 7, 0, -655349, 7, 0, -655348, 7, 0, -655347, 7, 0, -655341, 87, 0, -655340, 87, 0, -655339, 87, 0, -655338, 87, 0, -589820, 73, 0, -589819, 73, 0, -589818, 73, 0, -589817, 32, 0, -589816, 32, 0, -589815, 32, 0, -589814, 11, 0, -589813, 8, 0, -589812, 8, 0, -589811, 8, 0, -589805, 95, 0, -589804, 92, 0, -589803, 95, 0, -589802, 92, 0, -524284, 72, 0, -524283, 70, 0, -524282, 71, 0, -524278, 12, 0, -524277, 10, 0, -524276, 9, 0, -524275, 9, 0, -524274, 32, 0, -524273, 32, 0, -524272, 32, 0, -524271, 32, 0, -524270, 32, 0, -524269, 93, 0, -524268, 90, 0, -524267, 93, 0, -524266, 91, 0, -458748, 73, 0, -458747, 73, 0, -458746, 73, 0, -458742, 8, 0, -458741, 11, 0, -458740, 8, 0, -458739, 8, 0, -458733, 95, 0, -458732, 95, 0, -458731, 95, 0, -458730, 92, 0, -393212, 69, 0, -393211, 70, 0, -393210, 69, 0, -393206, 10, 0, -393205, 12, 0, -393204, 10, 0, -393203, 10, 0, -393197, 93, 0, -393196, 93, 0, -393195, 94, 0, -393194, 90, 0, -327676, 73, 0, -327675, 73, 0, -327674, 73, 0, -327670, 11, 0, -327669, 11, 0, -327668, 11, 0, -327667, 8, 0, -327661, 95, 0, -327660, 95, 0, -327659, 95, 0, -327658, 89, 0, -262140, 72, 0, -262139, 69, 0, -262138, 72, 0, -262134, 12, 0, -262133, 12, 0, -262132, 12, 0, -262131, 10, 0, -262125, 94, 0, -262124, 94, 0, -262123, 94, 0, -262122, 88, 0, -196607, 47, 0, -196606, 47, 0, -196605, 47, 0, -196604, 47, 0, -196603, 47, 0, -196602, 47, 0, -196601, 47, 0, -196598, 8, 0, -196597, 8, 0, -196596, 11, 0, -196595, 8, 0, -196590, 67, 0, -196589, 67, 0, -196588, 67, 0, -196587, 67, 0, -196586, 67, 0, -196585, 67, 0, -131071, 51, 0, -131070, 49, 0, -131069, 51, 0, -131068, 49, 0, -131067, 51, 0, -131066, 49, 0, -131065, 49, 0, -131062, 9, 0, -131061, 9, 0, -131060, 12, 0, -131059, 9, 0, -131054, 73, 0, -131053, 73, 0, -131052, 73, 0, -131051, 73, 0, -131050, 73, 0, -131049, 73, 0, -1, 32, 0, -65536, 32, 0, -65535, 50, 0, -65534, 48, 0, -65533, 50, 0, -65532, 48, 0, -65531, 50, 0, -65530, 48, 0, -65529, 48, 0, -65528, 32, 0, -65527, 32, 0, -65526, 8, 0, -65525, 8, 0, -65524, 11, 0, -65523, 8, 0, -65518, 70, 0, -65517, 72, 0, -65516, 70, 0, -65515, 70, 0, -65514, 70, 0, -65513, 70, 0, 1, 51, 0, 2, 49, 0, 3, 51, 0, 4, 49, 0, 5, 51, 0, 6, 51, 0, 7, 51, 0, 10, 10, 0, 11, 10, 0, 12, 12, 0, 13, 9, 0, 18, 73, 0, 19, 73, 0, 20, 73, 0, 21, 73, 0, 22, 73, 0, 23, 73, 0, 24, 32, 0, 25, 32, 0, 65537, 50, 0, 65538, 48, 0, 65539, 50, 0, 65540, 48, 0, 65541, 50, 0, 65542, 50, 0, 65543, 50, 0, 65546, 27, 0, 65547, 27, 0, 65548, 27, 0, 65549, 27, 0, 65550, 27, 0, 65551, 27, 0, 65554, 71, 0, 65555, 68, 0, 65556, 68, 0, 65557, 71, 0, 65558, 70, 0, 65559, 69, 0, 131073, 51, 0, 131074, 49, 0, 131075, 51, 0, 131076, 49, 0, 131077, 51, 0, 131078, 49, 0, 131079, 49, 0, 131082, 30, 0, 131083, 30, 0, 131084, 30, 0, 131085, 30, 0, 131086, 30, 0, 131087, 30, 0, 131090, 73, 0, 131091, 73, 0, 131092, 73, 0, 131093, 73, 0, 131094, 73, 0, 131095, 73, 0, 196609, 50, 0, 196610, 48, 0, 196611, 50, 0, 196612, 48, 0, 196613, 50, 0, 196614, 48, 0, 196615, 48, 0, 196618, 29, 0, 196619, 29, 0, 196620, 28, 0, 196621, 29, 0, 196622, 28, 0, 196623, 28, 0, 196626, 71, 0, 196627, 72, 0, 196628, 69, 0, 196629, 69, 0, 196630, 71, 0, 196631, 69, 0, 262145, 51, 0, 262146, 51, 0, 262147, 51, 0, 262148, 49, 0, 262149, 49, 0, 262150, 49, 0, 262151, 49, 0, 262154, 30, 0, 262155, 30, 0, 262156, 30, 0, 262157, 30, 0, 262158, 30, 0, 262159, 30, 0, 262160, 32, 0, 262161, 32, 0, 262162, 73, 0, 262163, 73, 0, 262164, 73, 0, 262165, 73, 0, 262166, 73, 0, 262167, 73, 0, 393215, 32, 0, 327680, 32, 0, 327681, 50, 0, 327682, 50, 0, 327683, 50, 0, 327684, 48, 0, 327685, 48, 0, 327686, 48, 0, 327687, 48, 0, 327690, 28, 0, 327691, 28, 0, 327692, 29, 0, 327693, 29, 0, 327694, 29, 0, 327695, 28, 0, 327698, 70, 0, 327699, 69, 0, 327700, 72, 0, 327701, 69, 0, 327702, 71, 0, 327703, 68, 0, 393217, 49, 0, 393218, 49, 0, 393219, 51, 0, 393220, 49, 0, 393221, 51, 0, 393222, 51, 0, 393223, 51, 0, 393226, 30, 0, 393227, 30, 0, 393228, 30, 0, 393229, 30, 0, 393230, 30, 0, 393231, 30, 0, 393234, 73, 0, 393235, 73, 0, 393236, 73, 0, 393237, 73, 0, 393238, 73, 0, 393239, 73, 0, 458753, 48, 0, 458754, 48, 0, 458755, 50, 0, 458756, 48, 0, 458757, 50, 0, 458758, 50, 0, 458759, 50, 0, 458760, 32, 0, 458761, 32, 0, 458762, 28, 0, 458763, 29, 0, 458764, 29, 0, 458765, 29, 0, 458766, 28, 0, 458767, 28, 0, 458770, 72, 0, 458771, 68, 0, 458772, 72, 0, 458773, 70, 0, 458774, 71, 0, 458775, 70, 0, 458776, 32, 0, 458777, 32, 0, 524289, 49, 0, 524290, 51, 0, 524291, 51, 0, 524292, 49, 0, 524293, 49, 0, 524294, 51, 0, 524295, 51, 0, 524298, 30, 0, 524299, 30, 0, 524300, 30, 0, 524301, 30, 0, 524302, 30, 0, 524303, 30, 0, 524306, 73, 0, 524307, 73, 0, 524308, 73, 0, 524309, 73, 0, 524310, 73, 0, 524311, 73, 0, 589825, 48, 0, 589826, 50, 0, 589827, 50, 0, 589828, 48, 0, 589829, 48, 0, 589830, 50, 0, 589831, 50, 0, 589834, 28, 0, 589835, 28, 0, 589836, 28, 0, 589837, 28, 0, 589838, 28, 0, 589839, 28, 0, 589840, 32, 0, 589841, 32, 0, 589842, 71, 0, 589843, 72, 0, 589844, 68, 0, 589845, 72, 0, 589846, 72, 0, 589847, 71, 0, 655361, 49, 0, 655362, 49, 0, 655363, 49, 0, 655364, 54, 0, 655365, 51, 0, 655366, 49, 0, 655367, 49, 0, 655370, 30, 0, 655371, 30, 0, 655372, 35, 0, 655373, 536870947, 0, 655374, 30, 0, 655375, 30, 0, 655378, 73, 0, 655379, 73, 0, 655380, 75, 0, 655381, 536870987, 0, 655382, 73, 0, 655383, 73, 0, 720897, 48, 0, 720898, 48, 0, 720899, 48, 0, 720900, 55, 0, 720901, 50, 0, 720902, 48, 0, 720903, 48, 0, 720906, 28, 0, 720907, 28, 0, 720908, 36, 0, 720909, 536870948, 0, 720910, 29, 0, 720911, 28, 0, 720914, 72, 0, 720915, 68, 0, 720916, 108, 0, 720917, 536871020, 0, 720918, 68, 0, 720919, 68, 0 )
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 35, 176 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -7.0
autoplay = true
bus = "Music"

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="PickableItemPositions" type="Node2D" parent="."]
position = Vector2( 38, -65 )

[node name="Position1" type="Position2D" parent="PickableItemPositions"]

[node name="Position2" type="Position2D" parent="PickableItemPositions"]
position = Vector2( 202, 65 )

[node name="Position3" type="Position2D" parent="PickableItemPositions"]
position = Vector2( 50, -139 )

[node name="Position4" type="Position2D" parent="PickableItemPositions"]
position = Vector2( 297, -109 )

[node name="Position5" type="Position2D" parent="PickableItemPositions"]
position = Vector2( 234, 196 )

[connection signal="timeout" from="TimerLayer/LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
